<!--
  Copyright 2011 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout android:id="@+id/header_session"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/body_padding_large"
        android:paddingRight="@dimen/body_padding_large"
        android:paddingTop="@dimen/body_padding_medium"
        android:paddingBottom="@dimen/body_padding_medium">

        <CheckBox android:id="@+id/star_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/star_button_padding"
            android:layout_marginLeft="@dimen/star_button_padding"
            android:focusable="false"
            android:clickable="false"
            android:contentDescription="@string/description_star"
            android:button="@drawable/btn_star" />

        <LinearLayout android:id="@+id/session_title_row"
            android:layout_toLeftOf="@id/star_button"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView android:id="@+id/session_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextHeader" />
            <TextView android:id="@+id/session_bof_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bof_label_bg"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/bof_label"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
            <TextView android:id="@+id/session_side_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/side_label_bg"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="@string/side_label"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView android:id="@+id/session_subtitle"
            android:layout_below="@id/session_title_row"
            android:layout_toLeftOf="@id/star_button"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/TextHeaderSub" />
    </RelativeLayout>

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TabWidget android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_off_background" />
            <FrameLayout android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <include android:id="@+id/tab_session_summary"
                    layout="@layout/tab_session_content" />
                <include android:id="@+id/tab_session_notes" layout="@layout/tab_session_notes" />
                <include android:id="@+id/tab_session_links" layout="@layout/tab_session_links" />
                <include android:id="@+id/tab_session_join" layout="@layout/tab_session_join" />
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
