<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">IETF Schedule</string>
    <string name="description_logo">IETF Schedule</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="bof_label">BoF</string>
    <string name="side_label">Side</string>
    <string name="description_now">Go to Now</string>

    <string name="title_now_playing">Now Playing</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_session_detail">Session Information</string>
    <string name="title_starred">Starred</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_vendors">Sandbox</string>
    <string name="title_vendor_detail">Company Information</string>
    <string name="title_map">Map</string>
    <string name="title_tagstream">Realtime Stream</string>
    <string name="title_bulletin">Bulletin</string>
	<string name="title_well_note">Note Well</string>

    <string name="title_session_tracks">Session tracks</string>
    <string name="title_vendor_tracks">Sandbox pods</string>

    <string name="title_share">Share using</string>

    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \'<xliff:g id="query">%1$s</xliff:g>\'</string>
    <string name="hint_search_sessions">Search sessions...</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_map">Map</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_vendors">Sandbox</string>
	<string name="btn_announcements">Note Well</string>
	<string name="feedback_and_support">Feedback and Support</string>

    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>

    <string name="session_subtitle_room"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
	<string name="session_subtitle_no_room"><xliff:g id="time">%1$s</xliff:g></string>

    <string name="all_sandbox_title">All companies</string>
    <string name="all_sandbox_subtitle">Tap to filter by sandbox companies by pod.</string>

    <string name="all_sessions_title">All sessions</string>
    <string name="all_sessions_subtitle">Tap to filter sessions by track.</string>

    <string name="empty_sessions">No sessions found</string>
    <string name="empty_session_detail">No session details found</string>
    <string name="empty_vendors">No sandbox results found</string>
    <string name="empty_search">No search results found</string>
    <string name="empty_links">No links available</string>

    <string name="session_content">Content</string>
    <string name="session_drafts">Internet Drafts</string>
    <string name="session_notes">Notes</string>
    <string name="session_links">Links</string>
    <string name="session_agenda">Agenda</string>
    <string name="agenda_unavailable">Agenda unavailable</string>
    <string name="agenda_load_error">Unable to load agenda. Please check your internet connection and try again.</string>
    <string name="session_join">Join</string>
    <string name="empty_join">No join information available</string>
    <string name="join_error_message">Unable to load Meetecho Lite. Please check your internet connection and try again.\n\nNote: Meetecho Lite is only available during the IETF meeting.</string>
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>

    <string name="tag_stream">Realtime stream for</string>
    
    <string name="session_link_main">Agenda</string>
    <string name="session_link_meetecho">Join Meeting On Site</string>
    <string name="session_link_youtube">YouTube video</string>
    <string name="session_link_pdf">Presentation Slides</string>
    <string name="session_link_feedback">Feedback on this session</string>
    <string name="session_link_notes">Official notes</string>

    <string name="search_sessions">Sessions</string>
    <string name="search_vendors">Sandbox</string>

    <string name="starred_sessions">Sessions</string>
    <string name="starred_vendors">Sandbox</string>

    <string name="search_label">IETF</string>
    <string name="search_hint">Session keywords</string>

    <string name="share_template">Checking out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="hashtags">%2$s</xliff:g> <xliff:g id="url">%3$s</xliff:g></string>

    <plurals name="whats_on_countdown_title">
        <item quantity="one"><xliff:g id="number_of_days">%1$d</xliff:g> day until IETF meeting</item>
        <item quantity="other"><xliff:g id="number_of_days">%1$d</xliff:g> days until IETF meeting</item>
    </plurals>

    <plurals name="whats_on_countdown_to_meeting">
        <item quantity="one"><xliff:g id="days">%1$d</xliff:g> day to IETF-<xliff:g id="number">%2$d</xliff:g> in <xliff:g id="city">%3$s</xliff:g></item>
        <item quantity="other"><xliff:g id="days">%1$d</xliff:g> days to IETF-<xliff:g id="number">%2$d</xliff:g> in <xliff:g id="city">%3$s</xliff:g></item>
    </plurals>
    <plurals name="whats_on_countdown_to_meeting_no_city">
        <item quantity="one"><xliff:g id="days">%1$d</xliff:g> day to IETF-<xliff:g id="number">%2$d</xliff:g></item>
        <item quantity="other"><xliff:g id="days">%1$d</xliff:g> days to IETF-<xliff:g id="number">%2$d</xliff:g></item>
    </plurals>

    <string name="whats_on_welcome">Welcome to IETF-<xliff:g id="number">%1$d</xliff:g> in <xliff:g id="city">%2$s</xliff:g>!</string>
    <string name="whats_on_welcome_no_city">Welcome to IETF-<xliff:g id="number">%1$d</xliff:g>!</string>
    <string name="whats_on_welcome_generic">Welcome to the IETF meeting!</string>
    <string name="whats_on_see_you">See you at IETF-<xliff:g id="number">%1$d</xliff:g> in <xliff:g id="city">%2$s</xliff:g>!</string>
    <string name="whats_on_see_you_no_city">See you at IETF-<xliff:g id="number">%1$d</xliff:g>!</string>

    <string name="whats_on_stream_title">Realtime\nStream</string>
    <string name="whats_on_now_playing_title">Now Playing</string>
	<string name="whats_on_thank_you_title">See you at the next IETF meeting!</string>
    <string name="permission_write">Modify IETF schedule data</string>
    <string name="toast_now_not_visible">Press this button during an IETF meeting to show the current time.</string>


    <!-- Notes integration -->
    <string name="notes_catch_powered_by">Notes are powered by <a href="http://www.catch.com/">Catch.com</a>.</string>
    <string name="notes_catch_market_title">Install Catch Notes</string>
    <string name="notes_catch_market_subtitle">You can take notes for IETF meetings using the latest version of Catch Notes, available from Android Market.</string>
    <string name="notes_catch_new_title">Create a new note</string>
    <string name="notes_catch_view_title">View track notes</string>
    <string name="toast_notes_error_invoking">Error invoking Catch Notes.</string>

    <string name="note_template">Session: <xliff:g id="title">%1$s</xliff:g>\n\n\n\n__________\nTags: <xliff:g id="hashtags">%2$s</xliff:g></string>
</resources>
